[package]
name = "tbp"
version = "0.1.0"
authors = ["MinusKelvin <mark.carlson@minuskelvin.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde-big-array = "0.3.2"
serde = { version = "1.0", features = ["derive"] }
