[package]
name = "tbp"
version = "1.0.0"
authors = ["MinusKelvin <mark.carlson@minuskelvin.net>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Tetris Bot Protocol types crate"
repository = "https://github.com/tetris-bot-protocol/tbp-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde-big-array = "0.3.2"
serde = { version = "1.0", features = ["derive"] }
enum-map = { version = "1.1.1", features = ["serde"] }
serde_json = "1.0.69"
derive_more = "0.99.16"

[features]
randomizer = []
move_info = []
